src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --text: 249 14% 10%;
    --text-offset: 249 14% 50%;
    --primary: 209 37% 38%;
    --secondary: 0 0% 100%;
    --accent: 181 38% 52%;
    --accent-light: 181 38% 90%;
    --tertiary: 6 85% 54%;
    --tertiary-light: 6 85% 90%;
    --input: 0 0% 93%;
  }
}

@layer base {
  html {
    @apply scroll-pt-fluid-xl md:scroll-pt-fluid-2xl;
  }

  body {
    @apply bg-background text-frontGround text-fluid-1 tracking-wider flex flex-col justify-between min-h-screen;
  }
}

/* link styles */

@layer components {
  .link {
    @apply hover:opacity-70;
  }

  .btn {
    @apply flex gap-3 justify-center items-center px-fluid-m py-fluid-2xs font-semibold border-2 rounded-full transition;
  }

  .btn-primary {
    @apply bg-accent text-white border-accent;
  }

  .btn-secondary {
    @apply bg-transparent text-white border-white;
  }

  .btn-inverted {
    @apply bg-white text-accent border-accent;
  }

  .btn-icon {
    @apply w-14 p-3 rounded-full aspect-square bg-white text-accent border-accent  md:hidden;
  }
}

/* hamburger/close icon animation */
.line {
  @apply w-full h-1 bg-slate-600 rounded-lg transition;
}

.open .top {
  @apply rotate-45 translate-y-2.5;
}

.open .middle {
  @apply hidden;
}

.open .bottom {
  @apply -rotate-45 -translate-y-2.5;
}

